# Minimum-spanning-tree

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  disjointSet.c  disjointSet.h  graph.c  graph.h  heap.c  heap.h  kruskal.c  prim.c  stack.c  stack.h
script/: test.sh
